--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -15,6 +15,7 @@
             [class.active]="cat == selectedCategory" (click)="changeCategory(cat)">
       {{cat}}
     </button>
+    <button class="btn btn-block btn-danger mt-5" routerLink="/admin">Admin</button>
   </div>
   <div class="col-9 bg-success p-1">
     <div *ngFor="let product of products" class="card card-body">
